k8s/k8s-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petclinic-route
  namespace: petclinic-demo
spec:
  to:
    kind: Service
    name: petclinic-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
